Added groups, finished numbering and ordering

--- a/EncodingCollector.html
+++ b/EncodingCollector.html
@@ -22,20 +22,20 @@
       <h1>Report of EncodingCollector.php</h1>
          <p>Using IANA character sets from '<a href="Archive/character-sets.txt">Archive/character-sets.txt</a>'</p>
          <p>Using GNU libiconv path at '<a href="../libiconv-1.14/lib/">../libiconv-1.14/lib/</a>'</p>
-         <p>Using ICU from '<a href="http://demo.icu-project.org/icu-bin/convexp?conv=&s=-&s=ALL&s=IANA&s=IBM&s=JAVA&s=MIME&s=UTR22&s=WINDOWS&ShowLocales&ShowUnavailable=">http://demo.icu-project.org/icu-bin/convexp?conv=&s=-&s=ALL&s=IANA&s=IBM&s=JAVA&s=MIME&s=UTR22&s=WINDOWS&ShowLocales&ShowUnavailable=</a>'</p>
+         <p>Using ICU from '<a href="Archive/ICU Demonstration - Converter Explorer.html">Archive/ICU Demonstration - Converter Explorer.html</a>'</p>
          <p>Using ICU base is '<a href="http://demo.icu-project.org/">http://demo.icu-project.org/</a>'</p>
-         <p>Using Microsoft from '<a href="https://msdn.microsoft.com/en-us/library/dd317756.aspx">https://msdn.microsoft.com/en-us/library/dd317756.aspx</a>'</p>
-         <p>Using IBM code pages from '<a href="http://www.ibm.com/software/globalization/cp/cp_cpgid.html">http://www.ibm.com/software/globalization/cp/cp_cpgid.html</a>'</p>
-         <p>Using IBM coded character sets from '<a href="http://www.ibm.com/software/globalization/ccsid/ccsid_registered.html">http://www.ibm.com/software/globalization/ccsid/ccsid_registered.html</a>'</p>
+         <p>Using Microsoft from '<a href="Archive/Code Page Identifiers (Windows).html">Archive/Code Page Identifiers (Windows).html</a>'</p>
+         <p>Using IBM code pages from '<a href="Archive/IBM Globalization - Code page identifiers.html">Archive/IBM Globalization - Code page identifiers.html</a>'</p>
+         <p>Using IBM coded character sets from '<a href="Archive/IBM Globalization - Coded character set identifiers.html">Archive/IBM Globalization - Coded character set identifiers.html</a>'</p>
          <p><b>7</b> parameters read in.</p>
       <h1>Reading meta information from Meta.csv</h1>
-         <p><b>1177</b> meta informations read in, <b>0</b> unset.</p>
+         <p><b>1192</b> meta informations read in, <b>0</b> unset.</p>
       <h1>Reading exclusions from Exclusion.csv</h1>
          <p><b>136</b> exclusions read in.</p>
       <h1>Reading references from Reference.csv</h1>
-         <p><b>95</b> references read in.</p>
+         <p><b>97</b> references read in.</p>
       <h1>Reading relations from Relation.csv</h1>
-         <p><b>40</b> relations read in.</p>
+         <p><b>44</b> relations read in.</p>
       <h1>Reading IANA character sets from Archive/character-sets.txt</h1>
          <p>IANA character set <b>ANSI_X3.4-1968</b> is new.</p>
          <p>IANA character set <b>ISO_8859-1:1987</b> is new.</p>
@@ -370,7 +370,7 @@
          <p>GNU_ICONV character set <b>DEC-KANJI</b> is new.</p>
          <p>GNU_ICONV character set <b>DEC-HANYU</b> is new.</p>
          <p><b>2</b> GNU_ICONV character sets read in, <b>2</b> new.</p>
-      <h1>Reading ICU character sets from http://demo.icu-project.org/icu-bin/convexp?conv=&s=-&s=ALL&s=IANA&s=IBM&s=JAVA&s=MIME&s=UTR22&s=WINDOWS&ShowLocales&ShowUnavailable=</h1>
+      <h1>Reading ICU character sets from Archive/ICU Demonstration - Converter Explorer.html</h1>
          <p>IBM_ICU character set <b>UTF16_OppositeEndian</b> is new.</p>
          <p>IBM_ICU character set <b>UTF32_OppositeEndian</b> is new.</p>
          <p>IBM_ICU character set <b>IMAP-mailbox-name</b> is new.</p>
@@ -567,9 +567,7 @@
          <p>ORACLE_JAVA character set <b>x-windows-949</b> is new.</p>
          <p>ORACLE_JAVA character set <b>x-windows-iso2022jp</b> is new.</p>
          <p><b>170</b> ORACLE_JAVA character sets read in, <b>7</b> new.</p>
-      <h1>Reading SELF aliases from Alias.csv</h1>
-         <p><b>16</b> SELF aliases read in.</p>
-      <h1>Reading MICROSOFT code pages from https://msdn.microsoft.com/en-us/library/dd317756.aspx</h1>
+      <h1>Reading MICROSOFT code pages from Archive/Code Page Identifiers (Windows).html</h1>
          <p>MS character set <b>ASMO-708</b> is new.</p>
          <p>MS character set <b>CP709</b> is new.</p>
          <p>MS character set <b>CP710</b> is new.</p>
@@ -593,21 +591,8 @@
          <p>MS character set <b>CP50936</b> is new.</p>
          <p><b>152</b> MS character sets read in, <b>21</b> new.</p>
       <h1>Creating or renaming character sets</h1>
-         <p>SELF character set <b>ISO_8859-9E</b> is new.</p>
-         <p>SELF character set <b>KPS9566_2003</b> is new.</p>
-         <p>SELF character set <b>ibm-276</b> is new.</p>
-         <p>SELF character set <b>ibm-282</b> is new.</p>
-         <p>SELF character set <b>ibm-421</b> is new.</p>
-         <p>SELF character set <b>ibm-934</b> is new.</p>
-         <p>SELF character set <b>ibm-938</b> is new.</p>
-         <p>SELF character set <b>ibm-1159</b> is new.</p>
-         <p>SELF character set <b>ibm-1372</b> is new.</p>
-         <p>SELF character set <b>ibm-1374</b> is new.</p>
-         <p>SELF character set <b>ibm-1376</b> is new.</p>
-         <p>SELF character set <b>ibm-1377</b> is new.</p>
-         <p>SELF character set <b>ibm-1391</b> is new.</p>
-         <p>SELF character set <b>ibm-1393</b> is new.</p>
-         <p>SELF character set <b>ibm-1394</b> is new.</p>
+         <p>SELF character set <b>ibm-1210</b> is new.</p>
+         <p>SELF character set <b>ibm-1211</b> is new.</p>
          <p>SELF character set <b>ibm-1400</b> is new.</p>
          <p>SELF character set <b>ibm-1401</b> is new.</p>
          <p>SELF character set <b>ibm-1402</b> is new.</p>
@@ -617,24 +602,46 @@
          <p>SELF character set <b>ibm-1447</b> is new.</p>
          <p>SELF character set <b>ibm-1448</b> is new.</p>
          <p>SELF character set <b>ibm-1449</b> is new.</p>
-         <p>SELF character set <b>ibm-310</b> is new.</p>
+         <p>SELF character set <b>ibm-65520</b> is new.</p>
+         <p>SELF character set <b>ISO_8859-9E</b> is new.</p>
+         <p>SELF character set <b>ibm-1372</b> is new.</p>
+         <p>SELF character set <b>ibm-1281</b> is new.</p>
          <p>SELF character set <b>ibm-956</b> is new.</p>
          <p>SELF character set <b>ibm-957</b> is new.</p>
          <p>SELF character set <b>ibm-958</b> is new.</p>
          <p>SELF character set <b>ibm-959</b> is new.</p>
+         <p>SELF character set <b>ibm-960</b> is new.</p>
+         <p>SELF character set <b>ibm-961</b> is new.</p>
+         <p>SELF character set <b>ibm-963</b> is new.</p>
+         <p>SELF character set <b>ibm-965</b> is new.</p>
+         <p>SELF character set <b>ibm-276</b> is new.</p>
+         <p>SELF character set <b>ibm-282</b> is new.</p>
+         <p>SELF character set <b>ibm-310</b> is new.</p>
+         <p>SELF character set <b>ibm-421</b> is new.</p>
+         <p>SELF character set <b>ibm-892</b> is new.</p>
+         <p>SELF character set <b>ibm-893</b> is new.</p>
          <p>SELF character set <b>ibm-1002</b> is new.</p>
-         <p>SELF character set <b>ibm-1040</b> is new.</p>
-         <p>SELF character set <b>ibm-1042</b> is new.</p>
          <p>SELF character set <b>ibm-1070</b> is new.</p>
          <p>SELF character set <b>ibm-1079</b> is new.</p>
          <p>SELF character set <b>ibm-1081</b> is new.</p>
          <p>SELF character set <b>ibm-1084</b> is new.</p>
+         <p>SELF character set <b>ibm-1159</b> is new.</p>
+         <p>SELF character set <b>ibm-1376</b> is new.</p>
+         <p>SELF character set <b>ibm-1377</b> is new.</p>
+         <p>SELF character set <b>ibm-876</b> is new.</p>
+         <p>SELF character set <b>ibm-899</b> is new.</p>
+         <p>SELF character set <b>ibm-934</b> is new.</p>
+         <p>SELF character set <b>ibm-938</b> is new.</p>
+         <p>SELF character set <b>ibm-1040</b> is new.</p>
+         <p>SELF character set <b>ibm-1042</b> is new.</p>
          <p>SELF character set <b>ibm-1126</b> is new.</p>
-         <p>SELF character set <b>ibm-1210</b> is new.</p>
-         <p>SELF character set <b>ibm-1211</b> is new.</p>
-         <p>SELF character set <b>ibm-1281</b> is new.</p>
+         <p>SELF character set <b>ibm-1374</b> is new.</p>
+         <p>SELF character set <b>ibm-1391</b> is new.</p>
+         <p>SELF character set <b>ibm-1393</b> is new.</p>
+         <p>SELF character set <b>ibm-1394</b> is new.</p>
          <p>SELF character set <b>ibm-1287</b> is new.</p>
          <p>SELF character set <b>ibm-1288</b> is new.</p>
+         <p>SELF character set <b>KPS9566_2003</b> is new.</p>
          <p>SELF character set <b>NSAI_433:1996</b> is new.</p>
          <p>SELF character set <b>IS</b> is new.</p>
          <p>SELF character set <b>MT</b> is new.</p>
@@ -646,21 +653,14 @@
          <p>SELF character set <b>iso-ir-31</b> is new.</p>
          <p>SELF character set <b>ELOT-927</b> is new.</p>
          <p>SELF character set <b>SI-960</b> is new.</p>
-         <p>SELF character set <b>ibm-876</b> is new.</p>
-         <p>SELF character set <b>ibm-892</b> is new.</p>
-         <p>SELF character set <b>ibm-893</b> is new.</p>
-         <p>SELF character set <b>ibm-899</b> is new.</p>
-         <p>SELF character set <b>ibm-960</b> is new.</p>
-         <p>SELF character set <b>ibm-961</b> is new.</p>
-         <p>SELF character set <b>ibm-963</b> is new.</p>
-         <p>SELF character set <b>ibm-965</b> is new.</p>
-         <p>SELF character set <b>ibm-65520</b> is new.</p>
          <p><b>62</b> character sets created, <b>171</b> renamed.</p>
+      <h1>Reading SELF aliases from Alias.csv</h1>
+         <p><b>16</b> SELF aliases read in.</p>
       <h1>Checking for uniqueness of aliases</h1>
          <p><b>5932</b> aliases added to set, <b>0</b> duplicate.</p>
-      <h1>Reading IBM code pages from http://www.ibm.com/software/globalization/cp/cp_cpgid.html</h1>
+      <h1>Reading IBM code pages from Archive/IBM Globalization - Code page identifiers.html</h1>
          <p><b>233</b> IBMCP code pages read in, <b>0</b> unused.</p>
-      <h1>Reading IBM coded character sets from http://www.ibm.com/software/globalization/ccsid/ccsid_registered.html</h1>
+      <h1>Reading IBM coded character sets from Archive/IBM Globalization - Coded character set identifiers.html</h1>
          <p class="warning">IBMCCS/2105 is unused.</p>
          <p class="warning">IBMCCS/4133 is unused.</p>
          <p class="warning">IBMCCS/4369 is unused.</p>
@@ -1072,8 +1072,8 @@
       <h1>Checking for unused meta information</h1>
          <p><b>0</b> meta informations are unused.</p>
       <h1>Creating XML database in CharacterSetDatabase.xml</h1>
-         <p><b>594</b> character sets and <b>95</b> references written.</p>
-         <p><b>525</b> checked, <b>11</b> unsave and <b>58</b> unchecked character sets written.</p>
+         <p><b>594</b> character sets in <b>15</b> groups and <b>97</b> references written.</p>
+         <p><b>530</b> checked, <b>11</b> unsave and <b>53</b> unchecked character sets written.</p>
       <h1>Statistics</h1>
          <p>Maximum memory used is <b>16.25</b> MB.</p>
-         <p>Time consumed is <b>9.64</b> seconds.</p>
+         <p>Time consumed is <b>2.26</b> seconds.</p>
